--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 body {
-  background-color: darkgray;
+  background-color: whitesmoke;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -13,7 +13,6 @@ nav {
     margin: 1px;
     border-radius: 10px;
     text-align: right;
-    text-shadow: 3px 3px black;
     font-weight: bold;
     }
 
@@ -28,7 +27,7 @@ nav {
     
     a{
         text-decoration: none;
-        color:whitesmoke;
+        color:gray;
     }
     
     
@@ -52,10 +51,10 @@ nav {
       }
 
       .head{
-height: 100px;
-width: 1180px;
-background-color: darkorange;
-border-radius: 15px;
+      height: 100px;
+      width: 1180px;
+      background-color: lightgray;
+      border-radius: 15px;
       }
 
       .head-text{
@@ -78,7 +77,7 @@ border-radius: 15px;
       .head-two{
         height: 100px;
         width: 1180px;
-      background-color: darkorange;
+      background-color: lightgray;
       border-radius: 15px;
       position: relative;
       top: 400px;
