--- a/css/browse.css
+++ b/css/browse.css
@@ -1,5 +1,5 @@
 body {
-  background-color: darkgray;
+  background-color: whitesmoke;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   
@@ -14,7 +14,7 @@ nav {
     margin: 1px;
     border-radius: 10px;
     text-align: right;
-    text-shadow: 3px 3px black;
+    /* text-shadow: 3px 3px black; */
     font-weight: bold;
     }
 
@@ -29,7 +29,7 @@ nav {
     
     a{
         text-decoration: none;
-        color:whitesmoke;
+        color:gray
     }
     
     
@@ -41,11 +41,14 @@ nav {
       a:hover {
         color: orange;
       }
-      
-      
-      
+ 
+     
 
-    a.active{
+
+
+
+
+     a.active{
       border-bottom: 3px #D4A455;
     }
       
@@ -56,11 +59,11 @@ nav {
     
       }
 
-      /* .container:hover .image {
+       .container:hover .image {
         opacity: 0.6;
-      } */
+      } 
       
-      .pictures:hover .middle {
+       .pictures:hover .middle {
         opacity: 1;
         
       }
@@ -76,13 +79,13 @@ nav {
         transition: .5s ease;
         backface-visibility: hidden;
         
-      }
+      } 
 
       .text:hover{
         z-index: 1;
       }
       
-      .text {
+      .kit-text {
         background-color: orange;
         color:white;
         font-size: 70px;
@@ -99,7 +102,15 @@ nav {
         transform: translate(-50%, -50%);
         -ms-transform: translate(-50%, -50%);
         text-align: center;
+      } 
+
+      .bath-text{
+        background-color: orange;
+        color:white;
+        font-size: 70px;
+        /* padding: 16px 32px; */
+        font-family: Arial, Helvetica, sans-serif;
       }
 
+     
     
-   
