--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,5 @@
 body {
-  background-color: darkgray;
+  background-color: whitesmoke;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   
@@ -14,7 +14,6 @@ nav {
     margin: 1px;
     border-radius: 10px;
     text-align: right;
-    text-shadow: 3px 3px black;
     font-weight: bold;
     }
 
@@ -29,7 +28,7 @@ nav {
     
     a{
         text-decoration: none;
-        color:whitesmoke;
+        color:gray;
     }
     
     
@@ -67,7 +66,16 @@ nav {
       h1{
        text-align: center;
        border-style:solid;
-       border-color: #D4A455;
+       border-color: darkorange;
        border-radius: 8px;
       
+      }
+
+      .submit{
+        height: 20px;
+        background-color: darkorange;
+      }
+
+      .submit:hover{
+        opacity: 0.8;
       }
