--- a/css/estimate.css
+++ b/css/estimate.css
@@ -1,5 +1,5 @@
 body {
-  background-color: darkgray;
+  background-color: whitesmoke;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -13,7 +13,6 @@ nav {
     margin: 1px;
     border-radius: 10px;
     text-align: right;
-    text-shadow: 3px 3px black;
     font-weight: bold;
     }
 
@@ -28,7 +27,7 @@ nav {
     
     a{
         text-decoration: none;
-        color:whitesmoke;
+        color:gray;
     }
     
     
