--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
 body {
-  background-color: darkgray;
+  background-color:whitesmoke;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-
-
-
 
 
 
@@ -13,13 +10,13 @@ nav {
     height: 70px;
     width: 100%;
     background-color:transparent;
-    color: white;
+    color: gray;
     opacity: 0.7;
     margin: 1px;
     border-radius: 10px;
     text-align: right;
     position: relative;
-    text-shadow: 3px 3px black;
+    /* text-shadow: 3px 3px black; */
     font-weight: bold;
     }
 
@@ -35,7 +32,7 @@ li{
 
 a{
     text-decoration: none;
-    color:whitesmoke;
+    color:gray;
 }
 
 
@@ -52,18 +49,18 @@ a:link {
   
 
   .hero-image {
-    background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/sunset.jpg");
-    height: 800px;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/blue .jpg");
+    height: 850px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    /* margin-top: 300px; */
+    /* margin-top: 100px;  */
   }
 
   .hero-text {
     text-align: center;
     position: absolute;
-    top: 48%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
@@ -83,11 +80,11 @@ a:link {
     font-size: 20px;
     text-align: center;
     font-weight: bold;
-    opacity: 0.8;
+    opacity: 0.9;
     
   }
   .hero-text button:hover {
-    background-color:orange;
+    background-color:#c0720c;
     
   }
 
@@ -97,3 +94,49 @@ a:link {
     bottom: 43px;
 
   }
+
+  .free-estimate{
+    background-color:transparent;
+    height: 30px;
+    width: 100%;
+    border-radius: 8px;
+    position:relative;
+    bottom: 8px;
+  }
+
+  .free-text{
+    font-family:monospace;
+    color:gray;
+    font-size: 10px;
+    /* text-align: center; */
+  }
+
+  .fa-instagram{
+    font-size: 30px;
+    /* text-align: right; */
+    position: relative;
+    bottom:42px;
+    left: 1850px;
+    color: gray;
+  }
+
+  .fa-twitter{
+    font-size: 30px;
+    color: gray;
+    position: relative;
+    bottom:42px;
+    left: 1780px;
+  }
+
+  .fa-yelp{
+    font-size: 30px;
+    color: gray;
+    position: relative;
+    bottom:42px;
+    left: 1708px;
+  }
+  .icons{
+    display: inline-block;
+  }
+
+ 
