--- a/css/browse.css
+++ b/css/browse.css
@@ -59,16 +59,51 @@ nav {
     
       }
 
-       .container:hover .image {
+
+      .box{
+        background-color: blue;
+        height:100vh;
+        width:100vw;
+        background-position: center;
+        background-size: 100% 100%;
+        position: relative;
+      }
+
+      .kitchen-text{
+        display: none;
+      }
+
+      .kitchen-text:hover{
+        z-index: 10;
+        position: absolute;
+        color: whitesmoke;
+        font-size: 180px;
+        left: 600px;
+        top:200px;
+        
+      }
+
+
+      .opacity:hover{
+        background-color: black;
+        height: 100%;
+        width: 100%;
+        opacity: .2;
+        z-index: -2;
+        /* position:relative; */
+      }
+
+
+       /* .container:hover .image {
         opacity: 0.6;
       } 
       
        .pictures:hover .middle {
         opacity: 1;
         
-      }
+      } */
       
-      .pictures:hover{
+      /* .pictures:hover{
         opacity: 0.7;
       }
       
@@ -89,7 +124,7 @@ nav {
         background-color: orange;
         color:white;
         font-size: 70px;
-        /* padding: 16px 32px; */
+     
         font-family: Arial, Helvetica, sans-serif;
       }
 
@@ -108,9 +143,9 @@ nav {
         background-color: orange;
         color:white;
         font-size: 70px;
-        /* padding: 16px 32px; */
+       
         font-family: Arial, Helvetica, sans-serif;
-      }
+      } */
 
      
     
