--- a/css/browse.css
+++ b/css/browse.css
@@ -61,7 +61,7 @@ nav {
 
 
       .box{
-        background-color: blue;
+        /* background-color: blue; */
         height:100vh;
         width:100vw;
         background-position: center;
