--- a/css/style.css
+++ b/css/style.css
@@ -128,12 +128,12 @@ a:link {
     left: 1780px;
   }
 
-  .fa-yelp{
+  .fa-pinterest-p{
     font-size: 30px;
     color: gray;
     position: relative;
     bottom:42px;
-    left: 1708px;
+    left: 1710px;
   }
   .icons{
     display: inline-block;
