--- a/css/estimate.css
+++ b/css/estimate.css
@@ -54,6 +54,8 @@ nav {
         background-color:darkorange;
         opacity: 0.8;
         height: 450px;
+        position: relative;
+        bottom: 120px;
       }
 
       .text{
@@ -66,7 +68,7 @@ nav {
         background-color: transparent;
         height: 20px;
         position: relative;
-        top: 30px;
+        bottom: 80px;
         width: 50%;
       }
 
@@ -77,17 +79,17 @@ nav {
       }
 
       .aside{
-        background-color: transparent;
+        background-color:transparent;
         height: 700px;
-        width: 350px;
+        width: 650px;
         position: relative;
-        left:65%;
-        bottom: 40px;
-       
+        left:1100px;
+        bottom: 160px;
+        
 
       }
 
       .aside-text{
-        font-size: 40px;
-        ;
+        font-size: 55px;
+        color: gray;
       }
